--- a/main.css
+++ b/main.css
@@ -3,4 +3,10 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  border: 1px solid red;
+}
+
+li {
+  display: flex;
+  list-style-type: none;
 }
