--- a/main.css
+++ b/main.css
@@ -1,12 +1,53 @@
 * {
-  font-family: 'Open Sans', sans-serif;* {
+  font-family: 'Open Sans', sans-serif;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  border: 1px solid red;
+}
+header {
+  background-color: black;
+  padding: 20px;
+  margin-bottom: 40px;
+}
+h1 {
+  color: white;
+}
+h1, h2, h3 {
+  text-align: center;
+}
+.list-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin-bottom: 60px;
 }
 
-li {
-  display: flex;
-  list-style-type: none;
+.list-item {
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid black;
+  box-shadow: 0 0.25em 1em rgba(0,0,0,0.2);
+}
+
+img {
+  max-width: 350px;
+  padding: 2px;
+}
+
+#deniro-portrait {
+  max-width: 250px;
+}
+span {
+  display: block;
+  text-align: center;
+  font-size: 30px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+
+footer {
+  text-align: center;
 }
